--- a/tanishq-clone/diamond.css
+++ b/tanishq-clone/diamond.css
@@ -856,6 +856,22 @@ h2 {
     z-index: 2;
 }
 
+
+.round{
+
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    background-color:#cc6874;
+    color: white;
+    padding: 5px 10px;
+    font-size: 12px;
+    font-weight: bold;
+    border-radius: 6px;
+    z-index: 2;
+
+}
+
 /* Wrapper for the images */
 .image-wrap {
     position: relative;
@@ -949,8 +965,29 @@ h2 {
 
 
 
-/* home-diamond */
+/* wishlist */
 
 
 
+/* Styling the wishlist button */
+.wishlist-btn {
+    
+    position: absolute;
+    top: 5px;
+    right: -85px;
+    background: none;
+    border: none;
+    font-size: 25px;
+    color: #aaa;
+    cursor: pointer;
+    transition: color 0.3s ease;
+}
 
+.wishlist-btn:hover {
+    color: red;  /* Changes color when hovered */
+}
+
+/* Style for when the item is added to wishlist (optional) */
+.wishlist-btn.active {
+    color: red;  /* Change color for active wishlist items */
+}
